--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<div class="wraper">
 			<div class="header">
 				<div class="logo">
+					<img src="images/logo.png">
 				</div>
 				<div class="conta">
 					Criar Conta | Iniciar Sessão
@@ -16,7 +17,12 @@
 			<div class="navigation">
 				<p>APOIAR PROJETO CRIAR PROJETO COMO FUNCIONA CASOS DE SUCESSO CONTATOS NEWSLETTERS</p>
 			</div>
-
+			<div class="slider">
+				<img src="images/slider.png">
+			</div>
+			<div class="banner">
+				<img src="images/banner.png">
+			</div>
 		</div>
 
 	</body>
