--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
 			<div class="banner">
 				<img src="images/banner.png">
 			</div>
+
+			<div class="blocos">
+				<div class="bloco">
+					PROJECTO ESCOLINHA
+				</div>
+				
+				<div class="bloco">
+					CRIAR A "CASA REFÚGIO TUDO VAI MELHORAR"
+				</div>
+				
+				<div class="bloco">
+					SE EU PUDESSE...
+				</div>
+			</div>
 		</div>
 
 	</body>
