inseridas imagens para blocos

--- a/index.html
+++ b/index.html
@@ -27,16 +27,24 @@
 			<div class="blocos">
 				<div class="bloco">
 					PROJECTO ESCOLINHA
+					<br>
+					<img src="images/bloco1.jpeg">
 				</div>
 				
 				<div class="bloco">
 					CRIAR A "CASA REFÚGIO TUDO VAI MELHORAR"
+					<br>
+					<img src="images/bloco2.png">
 				</div>
 				
 				<div class="bloco">
 					SE EU PUDESSE...
+					<br>
+					<img src="images/bloco3.png">
 				</div>
+				<p> Ver todas as campanhas activas </p>
 			</div>
+
 		</div>
 
 	</body>
