inseridos dados do footer

--- a/index.html
+++ b/index.html
@@ -42,7 +42,33 @@
 					<br>
 					<img src="images/bloco3.png">
 				</div>
-				<p> Ver todas as campanhas activas </p>
+			</div>
+			<p> LIKES </p>
+			<p>Ver todas as campanhas activas </p>
+
+			<div class="footer">
+				<div class="escuro">
+					<div class="sobre">
+						SOBRE
+						Site institucional
+						Como funciona
+						Casos de sucesso
+					</div>
+					<div class="regras">
+						REGRAS
+						Submeter projeto
+						Meios de pagamento
+						Termos e condições
+					</div>
+					<div class="ajuda">
+						AJUDA
+						Perguntas frequentes
+						Mapa do site
+						Contatos
+					</div>
+				</div>
+				<div class="claro">
+				</div>
 			</div>
 
 		</div>
