inseridos dados do segundo footer & imagens

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 	<title>Novo Banco Crowdfunding</title>
 	<meta charset="utf-8"/>
+	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	</head>
 
 	<body>
@@ -68,6 +69,13 @@
 					</div>
 				</div>
 				<div class="claro">
+					<div class="direitos">
+						2012-2014 Novo Banco, SA. Todos os Direitos Reservados
+					</div>
+					<div class="crowdfunding">
+						<img src="images/crowdfunding1.png">
+						<img src="images/crowdfunding2.png">
+					</div>
 				</div>
 			</div>
 
