--- a/index.html
+++ b/index.html
@@ -56,35 +56,38 @@
 			<p>Ver todas as campanhas activas </p>
 		</div>
 			<div class="footer">
-				<div class="escuro">
-					<div class="sobre">
-						SOBRE
-						Site institucional
-						Como funciona
-						Casos de sucesso
+					<div class="escuro">
+						<div class="footerwrap">
+							<div class="sobre">
+								SOBRE
+								Site institucional
+								Como funciona
+								Casos de sucesso
+							</div>
+							<div class="regras">
+								REGRAS
+								Submeter projeto
+								Meios de pagamento
+								Termos e condições
+							</div>
+							<div class="ajuda">
+								AJUDA
+								Perguntas frequentes
+								Mapa do site
+								Contatos
+							</div>
+						</div>
+					</div>	
+					<div class="claro">
+						<div class="direitos">
+							2012-2014 Novo Banco, SA. Todos os Direitos Reservados
+						</div>
+						<div class="crowdfunding">
+							<img src="images/crowdfunding2.png" class="imgfooter">
+							<img src="images/crowdfunding1.png" class="imgfooter">
+						</div>
 					</div>
-					<div class="regras">
-						REGRAS
-						Submeter projeto
-						Meios de pagamento
-						Termos e condições
-					</div>
-					<div class="ajuda">
-						AJUDA
-						Perguntas frequentes
-						Mapa do site
-						Contatos
-					</div>
-				</div>
-				<div class="claro">
-					<div class="direitos">
-						2012-2014 Novo Banco, SA. Todos os Direitos Reservados
-					</div>
-					<div class="crowdfunding">
-						<img src="images/crowdfunding1.png">
-						<img src="images/crowdfunding2.png">
-					</div>
-				</div>
+				</div>	
 			</div>
 
 		
