formatacao de texto

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-	<title>Novo Banco Crowdfunding</title>
+	<title>NOVO BANCO Crowdfunding</title>
 	<meta charset="utf-8"/>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	</head>
@@ -59,32 +59,34 @@
 					<div class="escuro">
 						<div class="footerwrap">
 							<div class="sobre">
-								SOBRE
-								Site institucional
-								Como funciona
-								Casos de sucesso
+								<h2>SOBRE</h2>
+								<p>Site institucional</p>
+								<p>Como funciona</p>
+								<p>Casos de sucesso</p>
 							</div>
-							<div class="regras">
-								REGRAS
-								Submeter projeto
-								Meios de pagamento
-								Termos e condições
+							<div class="sobre">
+								<h2>REGRAS</h2>
+								<p>Submeter projeto</p>
+								<p>Meios de pagamento</p>
+								<p>Termos e condições</p>
 							</div>
-							<div class="ajuda">
-								AJUDA
-								Perguntas frequentes
-								Mapa do site
-								Contatos
+							<div class="sobre">
+								<h2>AJUDA</h2>
+								<p>Perguntas frequentes</p>
+								<p>Mapa do site</p>
+								<p>Contatos</p>
 							</div>
 						</div>
 					</div>	
 					<div class="claro">
-						<div class="direitos">
-							2012-2014 Novo Banco, SA. Todos os Direitos Reservados
-						</div>
-						<div class="crowdfunding">
-							<img src="images/crowdfunding2.png" class="imgfooter">
-							<img src="images/crowdfunding1.png" class="imgfooter">
+						<div class="footerwrap">
+							<div class="direitos">
+								2012-2014 Novo Banco, SA. Todos os Direitos Reservados
+							</div>
+							<div class="crowdfunding">
+								<img src="images/crowdfunding2.png" class="imgfooter">
+								<img src="images/crowdfunding1.png" class="imgfooter">
+							</div>
 						</div>
 					</div>
 				</div>	
