formatacao de blocos e texto

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 					SE EU PUDESSE...
 					<br>
 					<img src="images/bloco3.png">
-					A A2000 promove, desde 2006, uma acção dirigida a 10 pessoas com deficiência grave, residentes no concelho de Sta. Marta de Penaguião – “Oficina dos Sorrisos”, que visa aumentar...
+					<p>A A2000 promove, desde 2006, uma acção dirigida a 10 pessoas com deficiência grave, residentes no concelho de Sta. Marta de Penaguião – “Oficina dos Sorrisos”, que visa aumentar...</p>
 				</div>
 			</div>
-			<p> LIKES </p>
+			<p>636 people like this. Be the first of your friends. </p>
 			<p>Ver todas as campanhas activas </p>
 		</div>
 			<div class="footer">
@@ -81,9 +81,12 @@
 					<div class="claro">
 						<div class="footerwrap">
 							<div class="direitos">
+								<br>
+								<br>
 								2012-2014 Novo Banco, SA. Todos os Direitos Reservados
 							</div>
 							<div class="crowdfunding">
+								<br>
 								<img src="images/crowdfunding2.png" class="imgfooter">
 								<img src="images/crowdfunding1.png" class="imgfooter">
 							</div>
